--- a/front/package.json
+++ b/front/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@formkit/i18n": "^1.6.9",
+    "@formkit/vue": "^1.6.9",
+    "formkit": "^1.6.9",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
