--- a/front/package.json
+++ b/front/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@formkit/i18n": "^1.6.9",
     "@formkit/vue": "^1.6.9",
+    "@vueuse/core": "^13.0.0",
     "formkit": "^1.6.9",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
