--- a/back/tsconfig.json
+++ b/back/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "es2016",                              
-    "module": "es2020",                             
+    "target": "es2017",
+    "module": "esnext",
     "esModuleInterop": true,                           
     "forceConsistentCasingInFileNames": true,            
     "strict": true,                                      
