--- a/back/package.json
+++ b/back/package.json
@@ -23,7 +23,11 @@
     "argon2": "^0.43.0",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.39.3",
+    "drizzle-typebox": "^0.3.2",
     "elysia": "^1.2.12",
     "pg": "^8.13.3"
+  },
+  "overrides": {
+    "@sinclair/typebox": "0.34.0"
   }
 }
