--- a/front/package.json
+++ b/front/package.json
@@ -21,7 +21,7 @@
     "@vue/tsconfig": "^0.7.0",
     "sass": "^1.87.0",
     "typescript": "~5.7.2",
-    "vite": "^6.1.0",
+    "vite": "6.3.4",
     "vue-tsc": "^2.2.0"
   }
 }
