--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@formkit/i18n": "^1.6.9",
     "@formkit/vue": "^1.6.9",
+    "@types/node": "^22.15.21",
     "@vueuse/core": "^13.0.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
