--- a/back/package.json
+++ b/back/package.json
@@ -19,6 +19,7 @@
     "typescript": "^5.7.3"
   },
   "dependencies": {
+    "@elysiajs/jwt": "^1.3.0",
     "@elysiajs/node": "^1.2.5",
     "argon2": "^0.43.0",
     "dotenv": "^16.4.7",
