--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,7 @@
     "@formkit/vue": "^1.6.9",
     "@types/node": "^22.15.21",
     "@vueuse/core": "^13.0.0",
+    "axios": "^1.9.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
