--- a/back/package.json
+++ b/back/package.json
@@ -19,13 +19,14 @@
     "typescript": "^5.7.3"
   },
   "dependencies": {
+    "@elysiajs/cors": "^1.3.3",
     "@elysiajs/jwt": "^1.3.0",
-    "@elysiajs/node": "^1.2.5",
+    "@elysiajs/node": "^1.2.6",
     "argon2": "^0.43.0",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.39.3",
     "drizzle-typebox": "^0.3.2",
-    "elysia": "^1.2.12",
+    "elysia": "1.2.25",
     "pg": "^8.13.3"
   },
   "overrides": {
