--- a/front/package.json
+++ b/front/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview",
-    "scss": "sass --watch scss:css"
+    "scss": "sass --watch scss:css",
+    "test": "npx vitest run"
   },
   "dependencies": {
     "@formkit/i18n": "^1.6.9",
@@ -19,11 +20,15 @@
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.2.1",
+    "@vitejs/plugin-vue": "^5.2.4",
+    "@vitest/ui": "^3.1.4",
+    "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.7.0",
+    "jsdom": "^26.1.0",
     "sass": "^1.87.0",
     "typescript": "~5.7.2",
     "vite": "6.3.4",
-    "vue-tsc": "^2.2.0"
+    "vitest": "^3.1.4",
+    "vue-tsc": "^2.2.10"
   }
 }
