--- a/back/package.json
+++ b/back/package.json
@@ -22,6 +22,7 @@
     "@elysiajs/cors": "^1.3.3",
     "@elysiajs/jwt": "^1.3.0",
     "@elysiajs/node": "^1.2.6",
+    "@elysiajs/swagger": "^1.3.0",
     "argon2": "^0.43.0",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.39.3",
